--- a/NativeInterop.Win32.Xaml/NativeInterop.Win32.Xaml.csproj
+++ b/NativeInterop.Win32.Xaml/NativeInterop.Win32.Xaml.csproj
@@ -5,11 +5,11 @@
     <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
     <RuntimeIdentifiers>win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
     <Nullable>enable</Nullable>
+    <UseWinUI>true</UseWinUI>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.0.0" />
-    <PackageReference Include="Vanara.PInvoke.User32" Version="3.3.14" />
   </ItemGroup>
 
   <ItemGroup>
