Fix packaging bugs. Add test & publish ci pipeline.

--- a/PackageInstaller/PackageInstaller.csproj
+++ b/PackageInstaller/PackageInstaller.csproj
@@ -59,4 +59,8 @@
         <ProjectReference Include="..\PackageInstaller.Core.Services\PackageInstaller.Core.Services.csproj" />
         <ProjectReference Include="..\PackageInstaller.Core\PackageInstaller.Core.csproj" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Properties\" />
+    </ItemGroup>
 </Project>
