--- a/NativeInterop.Win32.Xaml/NativeInterop.Win32.Xaml.csproj
+++ b/NativeInterop.Win32.Xaml/NativeInterop.Win32.Xaml.csproj
@@ -1,19 +1,17 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
+    <PropertyGroup>
+        <TargetFramework>net6.0-windows10.0.20348.0</TargetFramework>
+        <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
+        <RuntimeIdentifiers>win-x86;win-x64;win-arm64</RuntimeIdentifiers>
+        <Nullable>enable</Nullable>
+        <UseWinUI>true</UseWinUI>
+    </PropertyGroup>
 
-  <PropertyGroup>
-    <TargetFramework>net6.0-windows10.0.20348.0</TargetFramework>
-    <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
-    <RuntimeIdentifiers>win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
-    <Nullable>enable</Nullable>
-    <UseWinUI>true</UseWinUI>
-  </PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.0.0" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\NativeInterop.Win32\NativeInterop.Win32.csproj" />
-  </ItemGroup>
-
+    <ItemGroup>
+        <ProjectReference Include="..\NativeInterop.Win32\NativeInterop.Win32.csproj" />
+    </ItemGroup>
 </Project>
