--- a/PackageInstaller/PackageInstaller.csproj
+++ b/PackageInstaller/PackageInstaller.csproj
@@ -6,7 +6,7 @@
         <RootNamespace>PackageInstaller</RootNamespace>
         <ApplicationManifest>app.manifest</ApplicationManifest>
         <Platforms>x86;x64;arm64</Platforms>
-        <RuntimeIdentifiers>win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
+        <RuntimeIdentifiers>win-x86;win-x64;win-arm64</RuntimeIdentifiers>
         <UseWinUI>true</UseWinUI>
         <DefineConstants>DISABLE_XAML_GENERATED_MAIN</DefineConstants>
         <SupportedOSPlatformVersion>10.0.19041.0</SupportedOSPlatformVersion>
@@ -61,6 +61,6 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Properties\" />
+        <Folder Include="Properties\" />
     </ItemGroup>
 </Project>
