--- a/NativeInterop.Win32.Xaml/NativeInterop.Win32.Xaml.csproj
+++ b/NativeInterop.Win32.Xaml/NativeInterop.Win32.Xaml.csproj
@@ -3,6 +3,7 @@
         <TargetFramework>net6.0-windows10.0.20348.0</TargetFramework>
         <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
         <RuntimeIdentifiers>win-x86;win-x64;win-arm64</RuntimeIdentifiers>
+        <Platforms>x86;x64;arm64</Platforms>
         <Nullable>enable</Nullable>
         <UseWinUI>true</UseWinUI>
     </PropertyGroup>
