--- a/PackageInstaller.Core/PackageInstaller.Core.csproj
+++ b/PackageInstaller.Core/PackageInstaller.Core.csproj
@@ -1,19 +1,19 @@
 <Project Sdk="Microsoft.NET.Sdk">
+    <PropertyGroup>
+        <TargetFramework>net6.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+        <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
+        <Platforms>x64;x86;arm64</Platforms>
+        <RuntimeIdentifiers>win-x86;win-x64;win-arm64</RuntimeIdentifiers>
+    </PropertyGroup>
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Community.Wsl.Sdk" Version="0.1.4" />
-    <PackageReference Include="DynamicData" Version="7.5.4" />
-    <PackageReference Include="JetBrains.Profiler.Api" Version="1.1.8" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
-    <PackageReference Include="ReactiveUI" Version="17.1.50" />
-    <PackageReference Include="Sextant" Version="2.12.4" />
-  </ItemGroup>
-
+    <ItemGroup>
+        <PackageReference Include="Community.Wsl.Sdk" Version="0.1.4" />
+        <PackageReference Include="DynamicData" Version="7.5.4" />
+        <PackageReference Include="JetBrains.Profiler.Api" Version="1.1.8" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+        <PackageReference Include="ReactiveUI" Version="17.1.50" />
+        <PackageReference Include="Sextant" Version="2.12.4" />
+    </ItemGroup>
 </Project>
