Add signing cert

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,6 +36,7 @@ jobs:
     env:
        ARTIFACT_PATH: C:\AppPackage
        OUTPUT_PATH: C:\Release
+       CERTIFICATE_PATH: "cert.pfx"
     steps:
       - uses: olegtarasov/get-tag@v2.1
         id: tagName
@@ -68,8 +69,16 @@ jobs:
         env:
           TAG_NAME: ${{ steps.tagName.outputs.tag }}
           PROJ_PATH: ${{ matrix.packaging-project }}
+      - name: Extract certificate
+        shell: bash
+        run: echo "${{ secrets.APPX_CERTIFICATE }}" | base64 -d > {{ env.CERTIFICATE_PATH }}
       - name: Package msix
-        run: msbuild "$env:PROJ_PATH" /t:Build /p:Configuration=Release /p:Platform=x86 /p:Platform=arm64 /p:Platform=x64 /p:OutputPath="$env:ARTIFACT_PATH" /p:UapAppxPackageBuildMode=StoreUpload /p:Version="$env:TAG_NAME" /p:AppxBundle=Always /p:AppxBundlePlatforms="x86|x64|arm64" /p:AppxAutoIncrementPackageRevision=false
+        run: |
+            msbuild "$env:PROJ_PATH" /t:Build /p:Configuration=Release /p:Platform=x86 /p:Platform=arm64
+            /p:Platform=x64 /p:OutputPath="$env:ARTIFACT_PATH" /p:UapAppxPackageBuildMode=StoreUpload
+            /p:Version="$env:TAG_NAME" /p:AppxBundle=Always /p:AppxBundlePlatforms="x86|x64|arm64"
+            /p:AppxAutoIncrementPackageRevision=false /p:PackageCertificateKeyFile="{{ env.CERTIFICATE_PATH }}"
+            /p:PackageCertificatePassword="{{ secrets.APPX_CERTIFICATE_PASSWORD }}"
         env:
           TAG_NAME: ${{ steps.tagName.outputs.tag }}
           PROJ_PATH: ${{ matrix.packaging-project }}
