--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,11 +21,11 @@ jobs:
       - name: Setup VSTest Path
         uses: darenm/Setup-VSTest@v1
       - name: Build
-        run: msbuild /t:build -restore /p:Configuration=Release /p:Version="$env:TAG_NAME" -m:4 Winstrumenta.sln
+        run: msbuild /t:build /restore /p:Configuration=Release /p:Platform=x64 /p:Platform=x86 /p:Platform=arm64 /p:AppxPackage=false /m Winstrumenta.sln
         env:
           TAG_NAME: ${{ steps.tagName.outputs.tag }}
       - name: Test
-        run: Get-ChildItem -Recurse -Filter "*.Tests.dll" | ? { $_.FullName -Match "bin[\\/]Release" -and $_.FullName -notmatch "ref" } | % { vstest.console.exe $_.FullName }
+        run: Get-ChildItem -Recurse -Filter "*.Tests.dll" | ? { $_.FullName -Match "bin.[^.]+.Release" -and $_.FullName -notmatch "ref" } | % { vstest.console.exe $_.FullName }
 
   publish:
     runs-on: windows-2022
