--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,25 +7,7 @@ jobs:
   test:
     runs-on: windows-2022
     steps:
-      - name: Setup .NET SDKs
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: 6.0.x
-          include-prerelease: true
-      - name: Add msbuild to PATH
-        uses: microsoft/setup-msbuild@v1.1
-        with:
-          msbuild-architecture: x64
-          vs-version: 17
-          vs-prerelease: true
-      - name: Setup VSTest Path
-        uses: darenm/Setup-VSTest@v1
-      - name: Build
-        run: msbuild /t:build /restore /p:Configuration=Release /p:Platform=x64 /p:Platform=x86 /p:Platform=arm64 /p:AppxPackage=false /m Winstrumenta.sln
-        env:
-          TAG_NAME: ${{ steps.tagName.outputs.tag }}
-      - name: Test
-        run: Get-ChildItem -Recurse -Filter "*.Tests.dll" | ? { $_.FullName -Match "bin.[^.]+.Release" -and $_.FullName -notmatch "ref" } | % { vstest.console.exe $_.FullName }
+      - uses: ./.github/workflows/ci
 
   publish:
     runs-on: windows-2022
