Remove platform property

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,9 +14,9 @@ jobs:
       matrix:
         packaging-project: ["Winstrumenta.Package/Winstrumenta.Package.wapproj"]
     env:
-       ARTIFACT_PATH: C:\AppPackage
-       OUTPUT_PATH: C:\Release
-       CERTIFICATE_PATH: "cert.pfx"
+      ARTIFACT_PATH: C:\AppPackage
+      OUTPUT_PATH: C:\Release
+      CERTIFICATE_PATH: "cert.pfx"
     steps:
       - uses: olegtarasov/get-tag@v2.1
         id: tagName
@@ -41,11 +41,11 @@ jobs:
       - name: Update Manifest version string
         shell: powershell
         run: |
-             # Update appxmanifest. This must be done before the build.
-             $manifestPath = "$env:PROJ_PATH\..\Package.appxmanifest"
-             [xml]$manifest = Get-Content $manifestPath
-             $manifest.Package.Identity.Version = "$env:TAG_NAME.0"    
-             $manifest.save($manifestPath)
+          # Update appxmanifest. This must be done before the build.
+          $manifestPath = "$env:PROJ_PATH\..\Package.appxmanifest"
+          [xml]$manifest = Get-Content $manifestPath
+          $manifest.Package.Identity.Version = "$env:TAG_NAME.0"    
+          $manifest.save($manifestPath)
         env:
           TAG_NAME: ${{ steps.tagName.outputs.tag }}
           PROJ_PATH: ${{ matrix.packaging-project }}
@@ -54,11 +54,10 @@ jobs:
         run: echo "${{ secrets.APPX_CERTIFICATE }}" | base64 -d > ${{ env.CERTIFICATE_PATH }}
       - name: Package msix
         run: |
-            msbuild "$env:PROJ_PATH" /t:Build /restore /m /p:Configuration=Release /p:Platform=x86 /p:Platform=arm64 `
-            /p:Platform=x64 /p:OutputPath="$env:ARTIFACT_PATH" /p:UapAppxPackageBuildMode=StoreUpload `
-            /p:Version="$env:TAG_NAME" /p:AppxBundle=Always /p:AppxBundlePlatforms="x86|x64|arm64" `
-            /p:AppxAutoIncrementPackageRevision=false /p:PackageCertificateKeyFile="${{ env.CERTIFICATE_PATH }}" `
-            /p:PackageCertificatePassword="${{ secrets.APPX_CERTIFICATE_PASSWORD }}"
+          msbuild "$env:PROJ_PATH" /t:Build /restore /m /p:Configuration=Release /p:OutputPath="$env:ARTIFACT_PATH" /p:UapAppxPackageBuildMode=StoreUpload `
+          /p:Version="$env:TAG_NAME" /p:AppxBundle=Always /p:AppxBundlePlatforms="x86|x64|arm64" `
+          /p:AppxAutoIncrementPackageRevision=false /p:PackageCertificateKeyFile="${{ env.CERTIFICATE_PATH }}" `
+          /p:PackageCertificatePassword="${{ secrets.APPX_CERTIFICATE_PASSWORD }}"
         env:
           TAG_NAME: ${{ steps.tagName.outputs.tag }}
           PROJ_PATH: ${{ matrix.packaging-project }}
