--- a/PackageInstaller.Core.Services/PackageInstaller.Core.Services.csproj
+++ b/PackageInstaller.Core.Services/PackageInstaller.Core.Services.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>net6.0-windows10.0.19041.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
@@ -18,7 +18,7 @@
         <PackageReference Include="Community.Archives.Rpm" Version="1.2.0" />
         <PackageReference Include="Community.Archives.Tar" Version="1.2.0" />
         <PackageReference Include="Community.Wsa.Sdk" Version="1.0.3" />
-        <PackageReference Include="Community.Wsl.Sdk" Version="0.1.4" />
+        <PackageReference Include="Community.Wsl.Sdk" Version="2.0.2-alpha3" />
         <PackageReference Include="System.Memory" Version="4.5.4" />
     </ItemGroup>
 
