--- a/PackageInstaller.Core/PackageInstaller.Core.csproj
+++ b/PackageInstaller.Core/PackageInstaller.Core.csproj
@@ -9,7 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Community.Wsl.Sdk" Version="0.1.4" />
+        <PackageReference Include="Community.Wsl.Sdk" Version="2.0.2-alpha3" />
         <PackageReference Include="DynamicData" Version="7.5.4" />
         <PackageReference Include="JetBrains.Profiler.Api" Version="1.1.8" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
