--- a/PackageInstaller.Core.Services/PackageInstaller.Core.Services.csproj
+++ b/PackageInstaller.Core.Services/PackageInstaller.Core.Services.csproj
@@ -18,8 +18,8 @@
         <PackageReference Include="Community.Archives.Rpm" Version="1.2.0" />
         <PackageReference Include="Community.Archives.Tar" Version="1.2.0" />
         <PackageReference Include="Community.Wsa.Sdk" Version="1.0.3" />
-        <PackageReference Include="Community.Wsl.Sdk" Version="2.0.2-alpha3" />
-        <PackageReference Include="System.Memory" Version="4.5.4" />
+        <PackageReference Include="Community.Wsl.Sdk" Version="2.0.2" />
+        <PackageReference Include="System.Memory" Version="4.5.5" />
     </ItemGroup>
 
     <ItemGroup>
