--- a/PackageInstaller/PackageInstaller.csproj
+++ b/PackageInstaller/PackageInstaller.csproj
@@ -14,6 +14,14 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup>
+      <Compile Remove="Properties\**" />
+      <Content Remove="Properties\**" />
+      <EmbeddedResource Remove="Properties\**" />
+      <None Remove="Properties\**" />
+      <Page Remove="Properties\**" />
+      <PRIResource Remove="Properties\**" />
+    </ItemGroup>
+    <ItemGroup>
         <Content Remove="Assets\DistroIcons\README.md" />
     </ItemGroup>
     <ItemGroup>
@@ -38,17 +46,17 @@
         <PackageReference Include="Community.Sextant.WinUI" Version="0.5.0" />
         <PackageReference Include="Community.Sextant.WinUI.Microsoft.Extensions.DependencyInjection" Version="0.5.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
-        <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.0.0" />
+        <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.0.3" />
         <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22000.197" />
-        <PackageReference Include="ReactiveUI" Version="17.1.50" />
-        <PackageReference Include="ReactiveUI.WinUI" Version="17.1.50" />
-        <PackageReference Include="Scrutor" Version="4.0.0" />
+        <PackageReference Include="ReactiveUI" Version="18.0.10" />
+        <PackageReference Include="ReactiveUI.WinUI" Version="18.0.10" />
+        <PackageReference Include="Scrutor" Version="4.1.0" />
         <PackageReference Include="Sextant" Version="2.12.4" />
-        <PackageReference Include="SharpNinja.Extensions.WindowsAppSdkHost" Version="1.0.7" />
-        <PackageReference Include="Splat" Version="14.1.45" />
-        <PackageReference Include="Splat.Microsoft.Extensions.DependencyInjection" Version="14.1.45" />
-        <PackageReference Include="Splat.Microsoft.Extensions.Logging" Version="14.1.45" />
-        <PackageReference Include="Svg.Skia" Version="0.5.12" />
+        <PackageReference Include="SharpNinja.Extensions.WindowsAppSdkHost" Version="1.1.2" />
+        <PackageReference Include="Splat" Version="14.2.8" />
+        <PackageReference Include="Splat.Microsoft.Extensions.DependencyInjection" Version="14.2.8" />
+        <PackageReference Include="Splat.Microsoft.Extensions.Logging" Version="14.2.8" />
+        <PackageReference Include="Svg.Skia" Version="0.5.14" />
         <PackageReference Include="System.IO.Compression.ZipFile" Version="4.3.0" />
         <Manifest Include="$(ApplicationManifest)" />
     </ItemGroup>
@@ -59,9 +67,5 @@
         <ProjectReference Include="..\PackageInstaller.Core.Services.WinUI\PackageInstaller.Core.Services.WinUI.csproj" />
         <ProjectReference Include="..\PackageInstaller.Core.Services\PackageInstaller.Core.Services.csproj" />
         <ProjectReference Include="..\PackageInstaller.Core\PackageInstaller.Core.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <Folder Include="Properties\" />
     </ItemGroup>
 </Project>
